<fix>Added useState to handle showing forms in education input section and work input section separately. Increased gap between list items.

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 3fr 2fr;
   gap: 20px;
   padding: 20px;
 }
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  text-align: left; 
+  text-align: left;
+ 
 }
 
 .resume {
@@ -35,49 +36,11 @@
   padding: 10px;
 }
 
-.formSection > form ul {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  list-style: none;
-}
-
-form label {
-  display: block;
-  text-align: left;
-  font-weight: bold;
-  padding-right: 10px;
-}
-
-form input {
-  width: 300px;
-  height: 20px;
-  padding: 5px;
-  font-size: 18px;
-}
-
-form textarea {
-  width: 300px;
-  height: 60px;
-  resize: none;
-  padding: 5px;
-}
-
-form button {
-  position: relative;
-  left: 165px;
-  width: 150px;
-  padding: 5px 10px;
-  background-color: rgb(82, 82, 211);
-  color: white;
-}
-
-
 .listButton {
   background-color: rgb(82, 82, 211);
   color: white;
   margin-left: 10px;
-  padding: 5px 10px;
+  padding: 2px 6px;
 }
 
 .topForm {
